# jetkvm_client

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURE_PARITY.md  LICENSE  README.md  config.toml  flake.nix  jetkvm_client.1
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_SUMMARY.md  KEYBOARD_LAYOUTS.md
examples/: helloworld_windows_notepad.rs  send_text.rs  send_text_with_layout.rs
jetkvm_control_platform/: Cargo.toml
jetkvm_control_platform/src/: lib.rs  macos_util.rs  windows_util.rs
jetkvm_control_svr/: Cargo.toml  README.md  jetkvm_control_svr.rs
lua-examples/: macos_alt_tab.lua  macos_is_term_running.lua  macos_notepad_helloworld.lua  macos_siri.lua  macos_spotlight.lua  macos_terminal_helloworld.lua  windows-alt-tab.lua  windows-exit_notepad.lua  windows-is_cmd_running.lua  windows-notepad-helloworld.lua
scripts/: macos_spotlight.sh  run_mac_helloworld.sh  run_macos_sample.sh  run_svr.cmd  run_svr_mac.sh  run_win_alt_tab.cmd  run_win_helloworld.cmd  run_win_is_cmd_running.cmd
src/: advanced.rs  auth.rs  cloud.rs  console.rs  device.rs  extension.rs  hardware.rs  jetkvm_config.rs  jetkvm_control_svr_client.rs  jetkvm_rpc_client.rs  jiggler.rs  keyboard.rs  keyboard_layout.rs  keyboard_mappings.rs  lib.rs  lua_engine.rs  main.rs  mouse.rs  network.rs  power.rs  rpc_client.rs  storage.rs  system.rs  text_to_macro.rs  usb.rs  video.rs  wol.rs
src/keyboard_layouts/: en_us.rs  es_es.rs  mod.rs
src/signaling/: legacy.rs  mod.rs  websocket.rs
src/viewer/: edid.rs  input.rs  mod.rs  pipeline.rs  render.rs
