[package]
name = "jetkvm_control"
description = "A control client for JetKVM over WebRTC."
license = "MIT"
repository = "https://github.com/davehorner/jetkvm_control"
homepage = "https://github.com/davehorner/jetkvm_control"
version = "0.1.0"
edition = "2021"
authors = ["David Horner"]

[features]
default = ["lua"]
lua = ["mlua"]


[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
config = "0.15.8"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = "1.43.0"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
#webrtc = "0.12.0"
webrtc = { git = "https://github.com/davehorner/webrtc.git", branch = "jetkvm_16_bit_patch", version = "0.12.0" }
mlua = { version = "0.10.1", features = ["lua54", "vendored", "async", "send", "serialize"], optional = true }

[dev-dependencies]
regex = "1.11.1"
