[package]
name = "jetkvm_client"
description = "A client for JetKVM over WebRTC."
license = "MIT"
repository = "https://github.com/nilp0inter/jetkvm_client"
homepage = "https://github.com/nilp0inter/jetkvm_client"
version = "0.2.0"
edition = "2021"
authors = ["Roberto Abdelkader Martínez Pérez <robertomartinezp@gmail.com>"]

[lib]
name = "jetkvm_client"
path = "src/lib.rs"

[features]
default = ["tls"]
tls = [
    "tokio-rustls",
    "rustls",
    "rustls-pemfile",
    "rcgen",
    "hmac",
    "sha2",
    "hex",
]

[workspace]
members = []

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.49", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["blocking", "cookies", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
webrtc = "0.12.0"
windows = { version = "0.60.0", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Kernel", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
lazy_static = "1.5.0"


rand = { version = "0.9.0", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
hex = { version = "0.4.3", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
hmac = { version = "0.12.1", optional = true }
rustls = { version = "0.23.23", optional = true }
rcgen = { version = "0.13.2", optional = true }
sha2 = { version = "0.10.8", optional = true }


[dev-dependencies]
regex = "1.11.1"
